- #7263 Change name of Flatpak uploaded to snapshots
- #7265 Remove obtrusive Linux key press log messages
- #7269 Change file drag drop ERROR to DEBUG message
- #7274 Support env var to build unified core binary
- #7277 Change all errors that cause crash are FATAL
- #7282 Improve error handling for thread jobs
- #7284 Change session ID info log message to DEBUG2

Build/CI:

- #7283 Update all workflows and fix broken macOS workflows
- #7313 Fix CodeQL workflow: Failed to perl 404 Not Found
- #7317 Bump sonar-scanner-cli to 5.0.1.3006
- #7318 Remove Azure Pipelines config entirely
- #7319 Remove workflows for slow self-hosted RPi runners
- #7320 Move build_version.py script to scripts dir
- #7321 Switch to GitHub hosted Mac M1 runner
- #7322 Use C++20 and add Windows CMake preset
- #7323 Add Linux and macOS CMake presets
- #7325 Add timeout to all GitHub workflows

# 1.14.6

Bug fixes:

- #7208 Crash on FreeBSD when pressing special keys on a client
- #7241 Change the default signature hashing algorithm for sha256
- #7242 TLS certificate generation for Flatpak

Enhancements:

- #7222 Initiate non-TLS connection from server
- #7225 Initiate TLS connection from server
- #7239 Single app for server and client
- #7248 Firewall exception for client
- #7250 Builds for Fedora 37 and 38

# 1.14.5

Bug fixes:

- #7182 Remove unused TLS options from the GUI on client
- #7186 No additional TLS options for all users setting

Enhancements:

- #7183 Refactoring for Synergy 3 licenses
- #7190 Maintenance license serial key support
- #7193 Support for maintenance licenses in China
- #7197 Special contributor mentions on the about screen
- #7203 License registration for Business edition

CI changes:

- #7210 Update macos workflow to use macos-latest
- #7213 Update azure pipelines to use macos-latest

# 1.14.4

Bug fixes:

- #7144 Double lines when pasting text from Linux to Windows
- #7149 Address issues with modifiers and dead keys
- #7163 Fix compilation issues for FreeBSD